[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-lock-run"
version = "0.1.0"
description = "Prevent duplicate script execution using file-based locking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["lock", "file-lock", "mutex", "cron", "process-lock", "concurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-lock-run"
Repository = "https://github.com/philiprehberger/py-lock-run"
Issues = "https://github.com/philiprehberger/py-lock-run/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_lock_run"]
